# parameter-golf

./: LICENSE  README.md  train_gpt.py  train_gpt_mlx.py
data/: cached_challenge_fineweb.py  download_hf_docs_and_tokenize.py
records/track_10min_16mb/2026-03-22_AETHER_SparseSDP_Governor/: submission.json  train_gpt.py
records/track_10min_16mb/2026-03-22_AETHER_SparseSDP_Governor/docs/: FORMULATION.md  TECHNICAL_SPECIFICATION.md
records/track_10min_16mb/2026-03-22_AETHER_SparseSDP_Governor/docs/proofs/: Governor.lean  PruneSafety.lean
records/track_10min_16mb/2026-03-25_Epsilon_Aether_Sparsity/: README.md  submission.json  train_gpt.py
records/track_10min_16mb/2026-03-25_Epsilon_Aether_Sparsity/core/: EPSILON_README.md
records/track_10min_16mb/2026-03-25_Epsilon_Aether_Sparsity/core/crates/aether-core/: Cargo.toml
records/track_10min_16mb/2026-03-25_Epsilon_Aether_Sparsity/core/crates/aether-core/src/: aether.rs  governor.rs  lib.rs  manifold.rs  memory.rs  os.rs  state.rs  topology.rs
records/track_10min_16mb/2026-03-25_Epsilon_Aether_Sparsity/core/crates/aether-core/src/ml/: autograd.rs  benchmark.rs  classification.rs  clustering.rs  convergence.rs  convolution.rs  dataloader.rs  gossip.rs  linalg.rs  mod.rs  neural.rs  regressor.rs  tensor.rs
records/track_10min_16mb/2026-03-25_Epsilon_Aether_Sparsity/core/crates/epsilon/: Cargo.toml
records/track_10min_16mb/2026-03-25_Epsilon_Aether_Sparsity/core/crates/epsilon/src/: bridge.rs  governor.rs  lib.rs  manifold.rs  memory.rs  mock.rs  teleport.rs
records/track_10min_16mb/2026-03-25_Epsilon_Aether_Sparsity/docs/: README.md  aether_integration_demo.py
records/track_10min_16mb/2026-03-25_Epsilon_Aether_Sparsity/docs/proofs/: ChebyshevGC.lean
